Mobile menu changes

--- a/static/home.html
+++ b/static/home.html
@@ -36,7 +36,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="javascript:void(0)">Testimonials</a>
                         </li>
-                        <li class="nav-item purple-border-grad border-rounded-4">
+                        <li class="nav-item btn-contact">
                             <a class="nav-link" href="javascript:void(0)">Contact Us</a>
                         </li>
                     </ul>
@@ -51,7 +51,7 @@
 
         <!-- Banner slider section -->
         <section class="banner-section bg-purple-dark-grad" style="margin-bottom: 100px;">
-            <div class="banner-background-image position-absolute w-100">
+            <div class="banner-background-image position-absolute w-100 d-none d-lg-block">
                 <picture>
                     <source srcset="content/images/content-images/banner-section-background.jpeg">
                     <img src="content/images/content-images/banner-section-background.jpeg" alt="Banner section background image" width="1920" height="1068">
