Hamburger menu fixes

--- a/static/home.html
+++ b/static/home.html
@@ -14,32 +14,55 @@
 
     <!-- Header section starts -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-transparent position-absolute w-100 z-index-1">
+        <nav class="navbar bg-transparent position-absolute w-100 z-index-1" data-bs-spy="scroll" data-bs-target="#navbarNav">
             <div class="container">
-                <a class="navbar-brand" href="javascript:void(0)">
-                    <img src="content/images/content-images/logo-maven.svg" alt="Maven Logo" width="59" height="59">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto h-100">
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">How it works</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">Testimonials</a>
-                        </li>
-                        <li class="nav-item btn-contact">
-                            <a class="nav-link" href="javascript:void(0)">Contact Us</a>
-                        </li>
-                    </ul>
+                <div class="row w-100 position-relative mx-auto">
+                    <div class="col-12 col-md-3 p-0">
+                        <a class="navbar-brand" href="javascript:void(0)">
+                            <img src="content/images/content-images/logo-maven.svg" alt="Maven Logo" width="59" height="59">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-9 p-0 d-none d-lg-block">
+                        <ul class="nav align-items-center justify-content-end h-100">
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">How it works</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">Testimonials</a>
+                            </li>
+                            <li class="nav-item purple-border-grad border-rounded-4">
+                                <a class="nav-link" href="javascript:void(0)">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="navbar-toggler d-block d-lg-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ml-auto h-100">
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">How it works</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">Testimonials</a>
+                            </li>
+                            <li class="nav-item btn-contact">
+                                <a class="nav-link" href="javascript:void(0)">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -375,11 +398,9 @@
                 </div>                               
                 <div class="row">
                     <div class="col-md-3">
-                        <img
-                            loading="lazy"
-                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/bde6b77c-143c-40fa-aba1-e93644414636?apiKey=5151ddbef91541528bdb68746c0a3d02"
-                            class="img-fluid mb-3"
-                        />
+                        <a class="logo-image" href="javascript:void(0)">
+                            <img src="content/images/content-images/logo-maven.svg" alt="Maven Logo" width="56" height="56">
+                        </a>
                         <p class="text-white">Experience meaningful connections with a touch of trusted matchmaking.</p>
                     </div>
                     <div class="col-md-3 d-none d-md-block">
