--- a/static/home.html
+++ b/static/home.html
@@ -147,11 +147,11 @@
         </section>
 
         <!-- How It Works section -->
-        <section class="how-it-works-section pt-140 bg-purple-dark-grad">
+        <section class="how-it-works-section bg-purple-dark-grad">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 order-md-2">
-                        <h2>How It  Works</h2>
+                        <h2 class="text-center text-lg-left">How It  Works</h2>
                         <div class="image-text-block d-none d-md-block">
                             <div class="row">
                                 <div class="col">
@@ -196,8 +196,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="how-it-works-carousel" class="how-it-works-carousel carousel slide carousel-fade d-block d-md-none" data-ride="carousel">
-                            <div class="carousel-inner">
+                        <div id="how-it-works-carousel" class="how-it-works-carousel multicarousel carousel slide carousel-fade d-block d-md-none" data-ride="carousel">
+                            <div class="carousel-inner image-text-block">
                                 <div class="carousel-item active">
                                     <div class="media bg-grad-blur">
                                         <div class="img-block">
@@ -230,8 +230,8 @@
                                     <div class="media bg-grad-blur">
                                         <div class="img-block">
                                             <picture>
-                                                <source srcset="content/images/style-images/icon-connection-requests.svg">
-                                                <img src="content/images/style-images/icon-connection-requests.svg" alt="Expand connection" width="98" height="98">
+                                                <source srcset="content/images/style-images/icon-expand-connection.svg">
+                                                <img src="content/images/style-images/icon-expand-connection.svg" alt="Expand connection" width="98" height="98">
                                             </picture>
                                         </div>
                                         <div class="media-body">
@@ -253,7 +253,7 @@
                     <div class="col-md-6 order-md-1">
                         <picture>
                             <source media="(min-width:992px)" srcset="content/images/content-images/banner-maven-app-interface.png">
-                            <source srcset="content/images/content-images/banner-maven-app-interface-mobile.png">
+                            <source srcset="content/images/content-images/banner-maven-app-interface.png">
                             <img src="content/images/content-images/banner-maven-app-interface.png" alt="Maven app interface" width="591" height="719">
                         </picture>
                     </div>
@@ -262,7 +262,7 @@
         </section>
 
         <!-- Maven Approved Matches section -->
-        <section class="approved-matches-section bg-purple-dark-grad2 pt-140">
+        <section class="approved-matches-section bg-purple-dark-grad2">
             <div class="container">
                 <div class="section-heading text-center">
                     <h2>Maven Approved Matches</h2>
@@ -279,7 +279,7 @@
         </section>
 
         <!-- Verified Profiles section -->
-        <section class="verified-profiles-section bg-purple-dark-grad py-140">
+        <section class="verified-profiles-section bg-purple-dark-grad">
             <div class="container position-relative">
                 <div class="section-heading text-md-left">
                     <h2>Only Real Verified Profiles Are Allowed To Join</h2>
