Background blur and font size fixes

--- a/static/home.html
+++ b/static/home.html
@@ -82,13 +82,13 @@
             </div>
             <div class="floating-social-icons">
                 <a href="#" class="social-icon">
-                <img src="content/images/style-images/icon-youtube.svg" alt="Google" width="45" height="45">
+                    <img src="content/images/style-images/icon-youtube.svg" alt="Google" width="45" height="45">
                 </a>
                 <a href="#" class="social-icon">
-                <img src="content/images/style-images/icon-insta.svg" alt="Instagram" width="45" height="45">
+                    <img src="content/images/style-images/icon-insta.svg" alt="Instagram" width="45" height="45">
                 </a>
                 <a href="#" class="social-icon">
-                <img src="content/images/style-images/icon-meta.svg" alt="Meta" width="45" height="45">
+                    <img src="content/images/style-images/icon-meta.svg" alt="Meta" width="45" height="45">
                 </a>
             </div>
             <div class="container banner-content">
@@ -150,8 +150,8 @@
         <section class="how-it-works-section bg-purple-dark-grad">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 order-md-2">
-                        <h2 class="text-center text-lg-left">How It  Works</h2>
+                    <div class="col-xl-6 order-xl-2">
+                        <h2 class="text-center text-xl-left">How It  Works</h2>
                         <div class="image-text-block d-none d-md-block">
                             <div class="row">
                                 <div class="col">
@@ -196,49 +196,58 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="how-it-works-carousel" class="how-it-works-carousel multicarousel carousel slide carousel-fade d-block d-md-none" data-ride="carousel">
+                        <div id="how-it-works-carousel" class="how-it-works-carousel multicarousel carousel slide carousel-fade d-block d-md-none pointer-event" data-ride="carousel">
                             <div class="carousel-inner image-text-block">
                                 <div class="carousel-item active">
-                                    <div class="media bg-grad-blur">
-                                        <div class="img-block">
-                                            <picture>
-                                                <source srcset="content/images/style-images/icon-connection-requests.svg">
-                                                <img src="content/images/style-images/icon-connection-requests.svg" alt="connection requests" width="98" height="98">
-                                            </picture>
-                                        </div>
-                                        <div class="media-body">
-                                            <h5>Send or accept Connection Requests</h5>
-                                            <p>Send or accept connection requests to/from friends or act as a mentor</p>
+                                    <div class="bg-grad-blur">
+                                        <div class="media">
+                                            <div class="img-block">
+                                                <picture>
+                                                    <source srcset="content/images/style-images/icon-connection-requests.svg">
+                                                    <img src="content/images/style-images/icon-connection-requests.svg" alt="connection requests" width="98" height="98">
+                                                </picture>
+                                            </div>
+                                            <div class="media-body">
+                                                <h5>Send or accept Connection Requests</h5>
+                                                <p>Send or accept connection requests to/from friends or act as a mentor</p>
+                                            </div>
                                         </div>
                                     </div>
+
                                 </div>
                                 <div class="carousel-item">
-                                    <div class="media bg-grad-blur">
-                                        <div class="img-block">
-                                            <picture>
-                                                <source srcset="content/images/style-images/icon-meta2.svg">
-                                                <img src="content/images/style-images/icon-meta2.svg" alt="Meta connection" width="98" height="98">
-                                            </picture>
-                                        </div>
-                                        <div class="media-body">
-                                            <h5>Connect: Meta, Insta and Snapchat</h5>
-                                            <p>Link your Meta, Instagram or Snapchat account to connect with friends</p>
-                                        </div>
+                                    <div class="bg-grad-blur">
+                                        <div class="media">
+                                            <div class="img-block">
+                                                <picture>
+                                                    <source srcset="content/images/style-images/icon-meta2.svg">
+                                                    <img src="content/images/style-images/icon-meta2.svg" alt="Meta connection" width="98" height="98">
+                                                </picture>
+                                            </div>
+                                            <div class="media-body">
+                                                <h5>Connect: Meta, Insta and Snapchat</h5>
+                                                <p>Link your Meta, Instagram or Snapchat account to connect with friends</p>
+                                            </div>
+                                        </div> 
                                     </div>
+
                                 </div>
                                 <div class="carousel-item">
-                                    <div class="media bg-grad-blur">
-                                        <div class="img-block">
-                                            <picture>
-                                                <source srcset="content/images/style-images/icon-expand-connection.svg">
-                                                <img src="content/images/style-images/icon-expand-connection.svg" alt="Expand connection" width="98" height="98">
-                                            </picture>
-                                        </div>
-                                        <div class="media-body">
-                                            <h5>Expand, Explore, Thrive and Connect</h5>
-                                            <p>Discover mutual interests and expand your social circle within the app</p>
-                                        </div>
+                                    <div class="bg-grad-blur">
+                                        <div class="media">
+                                            <div class="img-block">
+                                                <picture>
+                                                    <source srcset="content/images/style-images/icon-expand-connection.svg">
+                                                    <img src="content/images/style-images/icon-expand-connection.svg" alt="Expand connection" width="98" height="98">
+                                                </picture>
+                                            </div>
+                                            <div class="media-body">
+                                                <h5>Expand, Explore, Thrive and Connect</h5>
+                                                <p>Discover mutual interests and expand your social circle within the app</p>
+                                            </div>
+                                        </div>     
                                     </div>
+
                                 </div>
                             </div>
                             <div class="carousel-control-wrapper">
@@ -250,12 +259,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 order-md-1">
-                        <picture>
-                            <source media="(min-width:992px)" srcset="content/images/content-images/banner-maven-app-interface.png">
-                            <source srcset="content/images/content-images/banner-maven-app-interface.png">
-                            <img src="content/images/content-images/banner-maven-app-interface.png" alt="Maven app interface" width="591" height="719">
-                        </picture>
+                    <div class="col-xl-6 order-xl-1">
+                        <div class="banner-image">
+                            <picture>
+                                <source media="(min-width:992px)" srcset="content/images/content-images/banner-maven-app-interface.png">
+                                <source srcset="content/images/content-images/banner-maven-app-interface.png">
+                                <img src="content/images/content-images/banner-maven-app-interface.png" alt="Maven app interface" width="591" height="719">
+                            </picture>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -440,13 +451,26 @@
                 </div>
                 <div class="footer-social-links">
                     <p class="text-white">Follow us</p>
-                    <img
-                        loading="lazy"
-                        src="https://cdn.builder.io/api/v1/image/assets/TEMP/0da364e0-8bbc-4ead-b765-f0ad47ca31d8?apiKey=5151ddbef91541528bdb68746c0a3d02"
-                        class="img-fluid mt-1"
-                    />
+                    <ul class="d-flex gap-16">
+                        <li>
+                            <a href="#" class="social-icon">
+                                <img src="content/images/style-images/icon-facebook.svg" alt="Facebook" width="23" height="23">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-icon">
+                                <img src="content/images/style-images/icon-instagram.svg" alt="Instagram" width="23" height="23">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-icon">
+                                <img src="content/images/style-images/icon-twitter.svg" alt="Twitter" width="23" height="23">
+                            </a>
+                        </li>
+                    </ul>
+
                 </div>
-                <hr class="bg-purple mt-3" />
+                <hr class="bg-purple mt-3">
                 <div class="footer-copyright text-center text-md-right mt-2">
                     <p>&copy; 2023 MAVEN MATCH | ALL RIGHTS RESERVED</p>
                 </div>
@@ -455,9 +479,9 @@
 
     </main>
 
-    <script src="content/scripts/jquery-3.6.0.js" type="text/javascript"></script>
+    <script src="content/scripts/jquery-3.6.0.js"></script>
     <script src="content/scripts/bootstrap.bundle.min.js"></script>
-    <script src="content/scripts/script.js" type="text/javascript"></script>
+    <script src="content/scripts/script.js"></script>
 
 </body>
 </html>
